# postgrest-toolset-poc

./: .gitignore  README.md  poc-1-langchain-sql-agent.md  poc-2-mcp-toolbox.md  poc-3-pgmcp.md  poc-4-llamaindex-sql.md
poc-langchain-sql-agent/: .env.example  README.md  requirements.txt
poc-langchain-sql-agent/scripts/: setup_sample_db.sql
poc-langchain-sql-agent/src/: __init__.py  agent.py  config.py
poc-langchain-sql-agent/tests/: __init__.py  test_agent.py
poc-llamaindex-sql/: .env.example  .gitignore  README.md  requirements.txt
poc-llamaindex-sql/scripts/: setup_sample_db.sql
poc-llamaindex-sql/src/: __init__.py  chat.py  config.py  engine.py
poc-llamaindex-sql/tests/: __init__.py  test_engine.py
poc-mcp-toolbox/: .env.example  .gitignore  README.md  requirements.txt
poc-mcp-toolbox/agent/: __init__.py  agent.py
poc-mcp-toolbox/scripts/: install_toolbox.sh  run_toolbox.sh  setup_sample_db.sql
poc-mcp-toolbox/tests/: __init__.py  test_agent.py
poc-mcp-toolbox/toolbox/: tools.yaml
poc-pgmcp/: .env.example  .gitignore  README.md  requirements.txt
poc-pgmcp/agent/: __init__.py  agent.py
poc-pgmcp/scripts/: install_pgmcp.sh  run_pgmcp.sh  setup_sample_db.sql
poc-pgmcp/tests/: __init__.py  test_mcp_integration.py  test_pgmcp_client.py
postgres-toolset/: .env.example  .gitignore  README.md  example_agent.py  pyproject.toml
postgres-toolset/src/: __init__.py  config.py  toolset.py
postgres-toolset/tests/: __init__.py  test_toolset.py
shared/: setup_sample_db.sql
